--- a/Server/YD_JZ/src/main/resources/application-dev.properties
+++ b/Server/YD_JZ/src/main/resources/application-dev.properties
@@ -8,12 +8,12 @@ server.port=8085
 
 
 #backup
-baseAutoExcel = F:/EasyAccounts/excel_template/auto_excel.xls
-baseScreenExcel = F:/EasyAccounts/excel_template/screen_excel.xls
-baseAnalysisExcel = F:/EasyAccounts/excel_template/analysis_excel.xls
+baseAutoExcel = D:/work/EasyAccountsOpenSource/Server/excel_template/auto_excel.xls
+baseScreenExcel = D:/work/EasyAccountsOpenSource/Server/excel_template/screen_excel.xls
+baseAnalysisExcel = D:/work/EasyAccountsOpenSource/Server/excel_template/analysis_excel.xls
 sqlBackUpFolder = /Ledger/backup/
-excelAutoFolder = F:/EasyAccounts/excel/month/
-excelScreenFolder = F:/EasyAccounts/excel/screen/
+excelAutoFolder = D:/work/EasyAccountsOpenSource/Server/excel/month/
+excelScreenFolder = D:/work/EasyAccountsOpenSource/Server/excel/screen/
 excelAnalysisFolder = /Ledger/excel/analysis/
 
 #sqlbackup
@@ -30,7 +30,7 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 
 auth.enable=${ENABLE_LOGIN:true}
 auth.folder=F:\\Temp\\auth
-auth.expired=${EXPIRED_TIME:999}
+auth.expired=${EXPIRED_TIME:518400}
 
 version.font_branch=3.0.0-dev
 version.backend_branch=2.3.0-dev
