--- a/Server/YD_JZ/src/main/resources/application-windows.properties
+++ b/Server/YD_JZ/src/main/resources/application-windows.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://192.168.50.226:10668/yd_jz?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/yd_jz?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.username=root
-spring.datasource.password=easy_accounts
+spring.datasource.password=123456
 logging.level.liquibase=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
 
@@ -11,16 +11,16 @@ mybatis.configuration.map-underscore-to-camel-case=true
 server.port=8085
 
 #backup
-baseAutoExcel = G:\\Temp\\excel\\auto\\auto_excel.xls
+baseAutoExcel = D:\\Temp\\excel\\auto\\auto_excel.xls
 baseScreenExcel = /Ledger/excel_template/screen_excel.xls
-baseAnalysisExcel = G:\\Temp\\excel\\auto\\analysis_excel.xls
+baseAnalysisExcel = D:\\Temp\\excel\\auto\\analysis_excel.xls
 sqlBackUpFolder = /Ledger/backup/
-excelAutoFolder = G:\\Temp\\excel\\auto\\
+excelAutoFolder = D:\\Temp\\excel\\auto\\
 excelScreenFolder = /Ledger/excel/screen/
-excelAnalysisFolder = G:\\Temp\\excel\\auto\\
+excelAnalysisFolder = D:\\Temp\\excel\\auto\\
 
 #sqlbackup
-sqldumpCmd = /usr/bin/mysqldump -h db -P 3306 -uroot  -p${DB_PASSWORD:easy_accounts} --databases yd_jz >
+sqldumpCmd = /usr/bin/mysqldump -h db -P 3306 -uroot  -p${DB_PASSWORD:123456} --databases yd_jz >
 
 #backtime
 cron.sqlBackupTime = ${SQL_BACKUP_TIME:00 00 22 * * ?}
@@ -31,8 +31,8 @@ webhook_url=http://webhook:8083/webhook
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 
 auth.enable=${ENABLE_LOGIN:true}
-auth.folder=G:\\Temp\\auth
-auth.expired=${EXPIRED_TIME:30}
+auth.folder=D:\\Temp\\auth
+auth.expired=${EXPIRED_TIME:518400}
 
 version.font_branch=3.0.0-dev
 version.backend_branch=2.3.0-dev
